<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/detail_activity_image_layout_height"
            android:padding="@dimen/detail_activity_inner_padding"
            android:layout_gravity="center_horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    style="@style/detail_activity_image_view"
                    android:id="@+id/iv_detail_activity_poster"
                    android:contentDescription="@string/poster_image_content_description"
                    android:paddingRight="@dimen/detail_activity_inner_padding"
                    android:paddingEnd="@dimen/detail_activity_inner_padding" />

                <ImageView
                    style="@style/detail_activity_image_view"
                    android:id="@+id/iv_detail_activity_backdrop"
                    android:contentDescription="@string/backdrop_image_content_description" />

            </LinearLayout>

        </HorizontalScrollView>

        <TextView
            style="@style/AppTheme"
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:textStyle="bold|italic"
            android:textSize="@dimen/detail_activity_title_text_size"
            android:paddingBottom="@dimen/detail_activity_title_padding_bottom"
            android:paddingLeft="@dimen/detail_activity_side_padding"
            android:paddingRight="@dimen/detail_activity_side_padding"/>

        <LinearLayout
            style="@style/detail_activity_field_layout" >

            <TextView
                style="@style/detail_activity_field_label"
                android:id="@+id/tv_original_title_label"
                android:text="@string/detail_activity_original_title_label"/>

            <TextView
                style="@style/detail_activity_field_value"
                android:id="@+id/tv_original_title" />

        </LinearLayout>

        <LinearLayout
            style="@style/detail_activity_field_layout" >

            <TextView
                style="@style/detail_activity_field_label"
                android:text="@string/detail_activity_average_vote_label"/>

            <TextView
                style="@style/detail_activity_field_value"
                android:id="@+id/tv_average_vote" />

        </LinearLayout>

        <LinearLayout
            style="@style/detail_activity_field_layout" >

            <TextView
                style="@style/detail_activity_field_label"
                android:text="@string/detail_activity_release_date_label"/>

            <TextView
                style="@style/detail_activity_field_value"
                android:id="@+id/tv_release_date" />

        </LinearLayout>

        <TextView
            style="@style/AppTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/detail_activity_overview_label"
            android:textStyle="bold"
            android:paddingLeft="@dimen/detail_activity_side_padding"
            android:paddingRight="@dimen/detail_activity_side_padding"
            android:paddingStart="@dimen/detail_activity_side_padding" />

        <TextView
            style="@style/AppTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_overview"
            android:paddingLeft="@dimen/detail_activity_side_padding"
            android:paddingRight="@dimen/detail_activity_side_padding"
            android:paddingBottom="@dimen/detail_activity_side_padding"/>

    </LinearLayout>

</ScrollView>